[package]
name = "sshfs-rs"
version = "0.1.0"
publish = false
authors = [ "Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>" ]
edition = "2018"

[dependencies]
anyhow = "1"
libc = "0.2"
libssh2-sys = "0.2"
pico-args = "0.3"
polyfuse = "0.4"
slab = "0.4"
ssh2 = "0.9"
tracing = "0.1"
tracing-subscriber = "0.1"
whoami = "1"
