[package]
name = "sshfs-rs"
version = "0.1.0"
publish = false
authors = [ "Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>" ]
edition = "2018"

[dependencies]
anyhow = "1"
futures = "0.3"
libc = "0.2"
pico-args = "0.3"
polyfuse = "0.4"
sftp = { git = "https://github.com/ubnt-intrepid/sftp-rs.git", rev = "fbcdaea" }
slab = "0.4"
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = "0.1"
whoami = "1"
